04-app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tutorial-app
  labels:
    app.kubernetes.io/part-of: connectivity-link-tutorial
    shared-gateway-access: "true"
