04-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo
  namespace: tutorial-app
  labels:
    app: echo
    app.kubernetes.io/part-of: connectivity-link-tutorial
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo
  template:
    metadata:
      labels:
        app: echo
    spec:
      containers:
        - name: echo
          image: quay.io/nlembers/rest-echo-service:latest
          ports:
            - containerPort: 8080
              name: http
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
