04-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo
  namespace: tutorial-app
  labels:
    app: echo
    app.kubernetes.io/part-of: connectivity-link-tutorial
spec:
  selector:
    app: echo
  ports:
    - name: http
      port: 80
      targetPort: 8080
